adding printing to files, more logging